# DROMA_MCP

./: .gitignore  README.md  pyproject.toml
Ref/: MCP_Architecture_Guide.md  droma_R.txt  droma_set.txt
src/droma_mcp/: __init__.py  __main__.py  cli.py  util.py
src/droma_mcp/schema/: __init__.py  data_loading.py  database_query.py  dataset_management.py
src/droma_mcp/server/: __init__.py  data_loading.py  database_query.py  dataset_management.py
test/: TEST_README.md  test_client.py  test_convert_r_to_python.py  test_dataset_loading.py  test_dataset_loading_real.py  test_dataset_management.py  test_server.py  test_simple.py
